[gd_scene load_steps=4 format=3 uid="uid://dtak7aat5yspu"]

[ext_resource type="Script" uid="uid://83pifmalc47k" path="res://levels/level_gen/generation/level_generator.gd" id="1_8du7d"]
[ext_resource type="TileSet" uid="uid://obe0ov82c2j4" path="res://levels/level_gen/parts/debug_graphics/square.tres" id="2_ii6pe"]
[ext_resource type="TileSet" uid="uid://coqb5tndb0kb8" path="res://levels/level_gen/parts/debug_graphics/hexgon.tres" id="3_u7cxg"]

[node name="LevelGenerator" type="Node2D"]
script = ExtResource("1_8du7d")
floor_tileset = ExtResource("2_ii6pe")

[node name="FloorLayer" type="TileMapLayer" parent="."]
tile_set = ExtResource("3_u7cxg")

[node name="Origin" type="Marker2D" parent="."]
gizmo_extents = 20.0

[node name="BoneHolder" type="Node2D" parent="Origin"]

[node name="WallHolder" type="Node2D" parent="Origin"]

[node name="SpawnerHolder" type="Node2D" parent="Origin"]
